Added more stuff on lists and strings

--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -27,6 +27,7 @@
     }
    ],
    "source": [
+    "# Note the [square brackets]\n",
     "mylist = ['apple', 'strawberry', 'pear']\n",
     "\n",
     "# Notice how indexing starts with 0\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -66,6 +67,123 @@
     "print(mylist[-1])\n",
     "print(mylist[-2])\n",
     "print(mylist[-3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List Processing\n",
+    "\n",
+    "There are a ton of things you can do to Lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Append\n",
+      "['mangoes', 'papayas', 'pears', 'oranges']\n",
+      "\n",
+      "Remove\n",
+      "['mangoes', 'pears', 'oranges']\n",
+      "\n",
+      "Pop last\n",
+      "oranges\n",
+      "['mangoes', 'pears']\n",
+      "\n",
+      "Pop first\n",
+      "mangoes\n",
+      "['pears']\n",
+      "\n",
+      "Add lists together\n",
+      "['pears', 'tomatoes', 'radishes', 'more mangoes']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "shopping_list = ['mangoes', 'papayas', 'pears']\n",
+    "\n",
+    "# Add things to their ends\n",
+    "print(\"Append\")\n",
+    "shopping_list.append('oranges')\n",
+    "print(shopping_list)\n",
+    "print\n",
+    "\n",
+    "# Remove things\n",
+    "print(\"Remove\")\n",
+    "shopping_list.remove('papayas')\n",
+    "print(shopping_list)\n",
+    "print\n",
+    "\n",
+    "# Remove things by index\n",
+    "print(\"Pop last\")\n",
+    "last_item = shopping_list.pop() # by default this is last item\n",
+    "print(last_item)\n",
+    "print(shopping_list)\n",
+    "print\n",
+    "\n",
+    "print(\"Pop first\")\n",
+    "first_item = shopping_list.pop(0) # 0 is the first item\n",
+    "print(first_item)\n",
+    "print(shopping_list)\n",
+    "print\n",
+    "\n",
+    "# Add lists together\n",
+    "print(\"Add lists together\")\n",
+    "tomorrows_list = ['tomatoes', 'radishes', 'more mangoes']\n",
+    "big_list = shopping_list + tomorrows_list\n",
+    "print(big_list)\n",
+    "print"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Strings\n",
+    "\n",
+    "A character is a single letter, number, or symbol. (eg. 'a', '1', '&', '#')\n",
+    "\n",
+    "A string is simply a list of characters!\n",
+    "\n",
+    "Everything you can do to a list, you can do to a String."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a string\n",
+      "The first letter is I\n",
+      "The last letter is g\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"I am a string\"\n",
+    "print(string)\n",
+    "\n",
+    "# Print the first letter\n",
+    "print(\"The first letter is \" + string[0])\n",
+    "\n",
+    "# Print the last letter\n",
+    "print(\"The last letter is \" + string[-1])"
    ]
   },
   {
